--- a/Front-End/Módulo 1/2ª Semana/Trabalho Prático da 2ª Semana/index.html
+++ b/Front-End/Módulo 1/2ª Semana/Trabalho Prático da 2ª Semana/index.html
@@ -22,13 +22,14 @@
             <td class="description">Domingos Martins - ES</td>
         </tr>
     </table>
-    <table id="body1" style="border-spacing: 15px;">
+    
+    <table class="navigation" style="border-spacing: 15px;">
         <tr align="center">
 
             <td style="background-color: #333334; border-radius: 15px; color: #fff; text-align: center; padding: 17px;"
                 width="25%">
 
-                <strong>Principal</strong>
+                <a href="index.html" style="color:#fff;"><strong>Principal</strong></a>
             </td>
 
             <td width="25%"><a href="quemsou.html" class="menu"><strong>Quem Sou</strong></a></td>
@@ -61,29 +62,29 @@
             </td>
         </tr>
     </table>
-    <table id="body2">
+    <table class="body">
         <tr>
-            <td><a href="index.html"><strong>Principal</strong></a></td>
+            <td width="15%"><a href="index.html"><strong>Principal</strong></a></td>
             <td colspan="3">
-                <p>Seja bem-vindo! Você está aqui, na página Principal.</p>
+                <p>Seja bem-vindo! Você está aqui, na página Principal. Nesta página, você encontra um resumo do conteúdo de todo o site.</p>
             </td>
         </tr>
         <tr>
-            <td><a href="quemsou.html"><strong>Quem Sou</strong></a></td>
+            <td width="15%"><a href="quemsou.html"><strong>Quem Sou</strong></a></td>
             <td colspan="3">
-                <p>Um pouco mais sobre meus conhecimentos e habilidades.</p>
+                <p>Um pouco mais sobre meus conhecimentos e habilidades, bem como uma mini biografia de minha vida profissional.</p>
             </td>
         </tr>
         <tr>
-            <td><a href="projetos.html"><strong>Projetos</strong></a></td>
+            <td width="15%"><a href="projetos.html"><strong>Projetos</strong></a></td>
             <td colspan="3">
-                <p>Por onde andei, diz bem sobre mim. Veja alguns projetos que colaborei.</p>
+                <p>Por onde andei, diz bem sobre mim. Veja alguns projetos que colaborei. Confira os trabalhos mais relevantes que pude atuar recentemente.</p>
             </td>
         </tr>
         <tr>
-            <td><a href="contato.html"><strong>Contato</strong></a></td>
+            <td width="15%"><a href="contato.html"><strong>Contato</strong></a></td>
             <td colspan="3">
-                <p>Vamos tomar um café? Networking é sempre bem-vindo.</p>
+                <p>Vamos tomar um café? Networking é sempre bem-vindo. Confira os canais por onde você consegue fazer contato comigo.</p>
             </td>
         </tr>
     </table>
