--- a/Front-End/Módulo 1/2ª Semana/Trabalho Prático da 2ª Semana/projetos.html
+++ b/Front-End/Módulo 1/2ª Semana/Trabalho Prático da 2ª Semana/projetos.html
@@ -13,7 +13,8 @@
 <body>
     <table id="header" cellpadding="5">
         <tr>
-            <td rowspan="2" width="190" align="right"><img src="img/perfil.jpg" alt="Perfil" width="100" class="perfil">
+            <td rowspan="2" width="190" align="right"><img src="img/perfil.jpg" alt="Perfil" width="120"
+                    style="border-radius: 50%;">
             </td>
             <td class="name" height="60">Aylmer Bolzan</td>
         </tr>
@@ -21,31 +22,67 @@
             <td class="description">Domingos Martins - ES</td>
         </tr>
     </table>
-    <hr>
 
-    <nav>
-        <a href="index.html"><strong>Principal</strong></a> ::
-        <a href="quemsou.html"><strong>Quem Sou</strong></a> ::
-        <a href="projetos.html"><strong><i>Projetos</i></strong></a> ::
-        <a href="contato.html"><strong>Contato</strong></a>
-    </nav>
+    <table class="navigation" style="border-spacing: 15px;">
+        <tr align="center">
 
-    <hr>
-    <h1>Confira alguns projetos:</h1>
+            <td width="25%"><a href="index.html" class="menu"><strong>Principal</strong></a></td>
 
-    <table>
-        <tr>
-            <td><a href="https://www.goldclube.com" target="_blank"><img src="img/projeto1.png" width="315"
-                        alt="GoldClube.com"></a></td>
-            <td><a href="https://www.bioage.com.br" target="_blank"><img src="img/projeto2.png" width="315"
-                        alt="Bioage.com.br"></a></td>
-            <td><a href="https://www.cpaps.com.br" target="_blank"><img src="img/projeto3.png" width="315"
-                        alt="CPAPS.com.br"></a></td>
+            <td width="25%"><a href="quemsou.html" class="menu"><strong>Quem Sou</strong></a></td>
+
+            <td style="background-color: #333334; border-radius: 15px; color: #fff; text-align: center; padding: 17px;"
+                width="25%">
+
+                <a href="projetos.html" style="color:#fff;"><strong>Projetos</strong></a>
+            </td>
+
+            <td width="25%"><a href="contato.html" class="menu"><strong>Contato</strong></a></td>
         </tr>
     </table>
 
-    <hr>
+    <table class="body">
+        <tr>
+            <td colspan="6">
+                <h1>Projetos mais relevantes</h1>
+                <p>Confira aqui alguns projetos interessantes que tive a oportunidade de participar recentemente, tendo
+                    grande participação em sua execução e que carrego com orgulho em meu portfólio:</p>
+            </td>
+        </tr>
+    </table>
 
+    <table class="body">
+        <tr>
+            <td width="33%"><a href="https://www.goldclube.com" target="_blank"><img src="img/projeto1.png" width="315"
+                        alt="GoldClube.com"></a></td>
+            <td colspan="2">
+                <h3><a href="https://www.goldclube.com" target="_blank">GoldClube.com</a></h3>
+                <p style="text-align: justify;">Agência de marketing de afiliação da região das montanhas capixabas que atua
+                    com produtos cosméticos, principalmente produtos capilares e emagrecedores.<br>Trabalhando com a criação
+                    de landing pages e focado em performance de tráfego pago, elevamos o marketing digital regional a outro
+                    nível ainda não trabalhado anteriormente.</p>
+            </td>
+        </tr>
+        <tr>
+            <td width="33%"><a href="https://www.bioage.com.br" target="_blank"><img src="img/projeto2.png" width="315"
+                        alt="Bioage.com.br"></a></td>
+            <td colspan="2">
+                <h3><a href="https://www.bioage.com.br" target="_blank">Bioage Skincare
+                        Solution</a></h3>
+                <p style="text-align: justify;">À frente da equipe Comercial e do Marketing, tive a oportunidade de implantar o e-commerce regional da franquia Bioage Vitória em Open Cart, levando a empresa a uma outra maturidade no varejo digital, quando anteriormente trabalhava somente com as redes sociais (Instagram e Facebook) e com representantes porta-a-porta e através de vendas por telefone.</p>
+            </td>
+        </tr>
+        <tr>
+            <td width="33%"><a href="https://www.cpaps.com.br" target="_blank"><img src="img/projeto3.png" width="315"
+                        alt="CPAPS.com.br"></a></td>
+            <td colspan="2">
+                <h3><a href="https://www.cpaps.com.br" target="_blank">CPAPS.com.br</a></h3>
+                <p style="text-align: justify;">Atuando como Gerente de E-commerce, tive a oportunidade de, por 4 anos,
+                    estar à frente do Marketing do maior e-commerce de equipamentos respiratórios da América Latina,
+                    passando inclusive por um momento super peculiar ao negócio, que foi a pandemia do COVID-19, em que o
+                    principal tipo de equipamento necessário era comercializado pela empresa.</p>
+            </td>
+        </tr>
+    </table>
     <table id="footer">
         <tr>
             <td>
@@ -57,5 +94,10 @@
     </table>
 
 </body>
+
+
+
+
+
 
 </html>
