--- a/Front-End/Módulo 1/2ª Semana/Trabalho Prático da 2ª Semana/quemsou.html
+++ b/Front-End/Módulo 1/2ª Semana/Trabalho Prático da 2ª Semana/quemsou.html
@@ -22,7 +22,8 @@
             <td class="description">Domingos Martins - ES</td>
         </tr>
     </table>
-    <table id="body1" style="border-spacing: 15px;">
+
+    <table class="navigation" style="border-spacing: 15px;">
         <tr align="center">
 
             <td width="25%"><a href="index.html" class="menu"><strong>Principal</strong></a></td>
@@ -30,7 +31,7 @@
             <td style="background-color: #333334; border-radius: 15px; color: #fff; text-align: center; padding: 17px;"
                 width="25%">
 
-                <strong>Quem Sou</strong>
+                <a href="quemsou.html" style="color:#fff;"><strong>Quem Sou</strong></a>
             </td>
 
             <td width="25%"><a href="projetos.html" class="menu"><strong>Projetos</strong></a></td>
@@ -39,28 +40,35 @@
         </tr>
     </table>
 
-    <table id="body2">
+    <table class="body">
         <tr>
             <td colspan="6">
                 <h1>Minibio</h1>
-                <p>Trilhando o caminho do varejo digital há 7 anos, desbravando todo o ecosistema que compõe esse fantástico canal, adquiri várias habilidades em minha jornada, além de toda a experiência prática, de ponta a ponta, na operação de um e-commerce: do Contábil à Logística, do Compras ao Comercial ao Pós-Venda.</p>
+                <p>Trilhando o caminho do varejo digital há 7 anos, desbravando todo o ecosistema que compõe esse
+                    fantástico canal, adquiri várias habilidades em minha jornada, além de toda a experiência prática,
+                    de ponta a ponta, na operação de um e-commerce: do Contábil à Logística, do Compras ao Comercial ao
+                    Pós-Venda.</p>
 
-                   <p> Atualmente tenho meu e-commerce de biocosméticos, SALVIA.eco.br, e trabalho de forma autônoma
+                <p> Atualmente tenho meu e-commerce de biocosméticos, SALVIA.eco.br, e trabalho de forma autônoma
                     ajudando empreendedores a alavancarem suas vendas no digital, partindo desde o absoluto zero.</p>
 
-                   <p>E tem muito mais, hein? Confere minhas experiências e veja se meus conhecimentos se encaixam com o
+                <p>E tem muito mais, hein? Confere minhas experiências e veja se meus conhecimentos se encaixam com o
                     que você precisa. (;</p>
 
-                  <p>  Gosto de trabalhar com pessoas que têm sangue nos olhos! Reunir a equipe, trocar ideias, distribuir
+                <p> Gosto de trabalhar com pessoas que têm sangue nos olhos! Reunir a equipe, trocar ideias, distribuir
                     quem vai fazer o que e... Mão na massa! Depois, apuramos os resultados, citamos os pontos de
                     aprendizagem e brindamos às conquistas.</p>
 
-                   <p>Vamos tomar um café e conversar mais. Que tal? (:</p>
+                <p>Vamos tomar um café e conversar mais. Que tal? (:</p>
             </td>
         </tr>
         <tr>
-            <td colspan="3"><h2> Habilidades</h2></td>
-            <td colspan="3"><h2>Idiomas</h2></td>
+            <td colspan="3">
+                <h2> Habilidades</h2>
+            </td>
+            <td colspan="3">
+                <h2>Idiomas</h2>
+            </td>
         </tr>
         <tr>
             <td>HTML</td>
@@ -88,41 +96,74 @@
         </tr>
     </table>
 
-    <h2>Experiência Profissional</h2>
+    <table class="body">
+        <tr>
+            <td colspan="5">
+                <h2>Experiência Profissional</h2>
+            </td>
 
-    <dl>
-        <dt><strong>CMO | <a href="https://www.goldclube.com" target="_blank">GoldClube.com</a></strong></dt>
-        <dd>&#x1f4c5; 2021 - 2022</dd>
-    </dl>
-    <ul>
-        <li>Criação de otimização de landing pages</li>
-        <li>Implantação de automação de atendimento e email marketing</li>
-        <li>Implantação de CRM e processos de atendimento</li>
-    </ul>
-    <dl>
-        <dt><strong>Coordenador de E-commerce | <a href="https://www.cpaps.com.br"
-                    target="_blank">CPAPS.com.br</a></strong></dt>
-        <dd>&#x1f4c5; 2017 - 2021</dd>
-    </dl>
-    <ul>
-        <li>Gestão de equipe de Marketing interna e externa</li>
-        <li>Planejamento de campanhas de aquisição e retenção</li>
-        <li>Análise e acompanhamento do mercado</li>
-    </ul>
-    <dl>
-        <dt><strong>Gerente de Marketing | <a href="https://www.bioage.com.br" target="_blank">Bioage Skincare
-                    Solution</a></strong></dt>
-        <dd>&#x1f4c5; 2016 - 2017</dd>
-    </dl>
-    <ul>
-        <li>Implantação do e-commerce</li>
-        <li>Gestão das campanhas de tráfego pago</li>
-        <li>Desenvolvimento e realização de workshops e eventos</li>
-    </ul>
+        </tr>
+        <tr>
+            <td colspan="5">
+                <h4>CMO | <a href="https://www.goldclube.com" target="_blank">GoldClube.com</a></h4>
+            </td>
+
+        </tr>
+        <tr>
+            <td>
+                <p>&#x1f4c5; 2017 - 2021</p>
+            </td>
+            <td colspan="4">
+                <ul>
+                    <li>Criação de otimização de landing pages</li>
+                    <li>Implantação de automação de atendimento e email marketing</li>
+                    <li>Implantação de CRM e processos de atendimento</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="5">
+                <h4>Coordenador de E-commerce | <a href="https://www.cpaps.com.br"
+                            target="_blank">CPAPS.com.br</a></h4>
+            </td>
+
+        </tr>
+        <tr>
+            <td>
+                <p>&#x1f4c5; 2017 - 2021</p>
+            </td>
+            <td colspan="4">
+                <ul>
+                    <li>Gestão de equipe de Marketing interna e externa</li>
+                    <li>Planejamento de campanhas de aquisição e retenção</li>
+                    <li>Análise e acompanhamento do mercado</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="5">
+                <h4>Gerente de Marketing | <a href="https://www.bioage.com.br" target="_blank">Bioage Skincare
+                            Solution</a></h4>
+            </td>
+
+        </tr>
+        <tr>
+            <td>
+                <p>&#x1f4c5; 2016 - 2017</p>
+            </td>
+            <td colspan="4">
+                <ul>
+                    <li>Implantação do e-commerce</li>
+                    <li>Gestão das campanhas de tráfego pago</li>
+                    <li>Desenvolvimento e realização de workshops e eventos</li>
+                </ul>
+
+            </td>
+        </tr>
+    </table>
 
 
 
-    
 
     <table id="footer">
         <tr>
@@ -153,4 +194,3 @@
 </body>
 
 </html>
-
