Correção de bloco #projetos

--- a/Front-End/Módulo 1/3ª Semana/Trabalho Prático da 3ª Semana/index.html
+++ b/Front-End/Módulo 1/3ª Semana/Trabalho Prático da 3ª Semana/index.html
@@ -39,7 +39,7 @@
         <div class="areadireita">
 
             <!--Cabeçalho-->
-            <div class="cabecalho">
+            <div>
                 <h3>portfólio de</h3>
                 <h1>
                     <strong>Aylmer Bolzan</strong>
@@ -85,10 +85,10 @@
                     <div class="imagem">
                         <img src="img/imghome.jpg">
                     </div>
-                    <div class="clear"></div>
                 </div>
 
                 <!--Habilidades Técnicas-->
+                <br>
                 <div>
 
                     <h3 class="my3">Habilidades Técnicas</h3>
@@ -111,42 +111,77 @@
                 </div>
 
                 <!--Formação Acadêmica-->
-                <div class="formacao">
+                <br>
+                <div>
 
                     <h3 class="my3">Formação Acadêmica</h3>
                     <div class="mb3">
-                        <h4 class="fw-normal mb1"><b>2011 - 2013</b> :: Técnico em Informática pelo Ifes
+                        <h4 class="fw-normal mb1"><b>2022 - 2023</b> : Desenvolvedor Web - <i>IFES</i>
                         </h4>
                         <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, nobis. Doloremque possimus voluptas, numquam perspiciatis fuga ducimus asperiores incidunt debitis distinctio vel corporis. Harum cupiditate tempore aliquam, nesciunt iure aliquid!
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, nobis. Doloremque possimus
+                            voluptas, numquam perspiciatis fuga ducimus asperiores incidunt debitis distinctio vel
+                            corporis. Harum cupiditate tempore aliquam, nesciunt iure aliquid!
                         </p>
                     </div>
                     <div class="mb3">
-                        <h4 class="fw-normal mb1"><b>2011 - 2013</b> :: Técnico em Informática pelo Ifes
+                        <h4 class="fw-normal mb1"><b> 2021 - 2021</b> : Conversion Rate Optimization (CRO) - <i>Rock
+                                University</i>
                         </h4>
                         <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, nobis. Doloremque possimus voluptas, numquam perspiciatis fuga ducimus asperiores incidunt debitis distinctio vel corporis. Harum cupiditate tempore aliquam, nesciunt iure aliquid!
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, nobis. Doloremque possimus
+                            voluptas, numquam perspiciatis fuga ducimus asperiores incidunt debitis distinctio vel
+                            corporis. Harum cupiditate tempore aliquam, nesciunt iure aliquid!
                         </p>
                     </div>
                     <div class="mb3">
-                        <h4 class="fw-normal mb1"><b>2011 - 2013</b> :: Técnico em Informática pelo Ifes
+                        <h4 class="fw-normal mb1"><b>2020 - 2020</b> : Aprofundamento em Email Marketing e Automações -
+                            <i>RD University</i>
                         </h4>
                         <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, nobis. Doloremque possimus voluptas, numquam perspiciatis fuga ducimus asperiores incidunt debitis distinctio vel corporis. Harum cupiditate tempore aliquam, nesciunt iure aliquid!
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, nobis. Doloremque possimus
+                            voluptas, numquam perspiciatis fuga ducimus asperiores incidunt debitis distinctio vel
+                            corporis. Harum cupiditate tempore aliquam, nesciunt iure aliquid!
                         </p>
                     </div>
                     <div class="mb3">
-                        <h4 class="fw-normal mb1"><b>2011 - 2013</b> :: Técnico em Informática pelo Ifes
+                        <h4 class="fw-normal mb1"><b>2020 - 2020</b> : Advanced Google Analytics - <i>Google Academy</i>
                         </h4>
                         <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, nobis. Doloremque possimus voluptas, numquam perspiciatis fuga ducimus asperiores incidunt debitis distinctio vel corporis. Harum cupiditate tempore aliquam, nesciunt iure aliquid!
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, nobis. Doloremque possimus
+                            voluptas, numquam perspiciatis fuga ducimus asperiores incidunt debitis distinctio vel
+                            corporis. Harum cupiditate tempore aliquam, nesciunt iure aliquid!
                         </p>
                     </div>
 
                 </div>
 
                 <!--Idiomas-->
-                <div class="idiomas"></div>
+                <br>
+                <div>
+                    <h3 class="my3">Idiomas</h3>
+
+                    <h4 class="fw-normal mb1">Português</h4>
+                    <div class="progresso mb3">
+                        <div class="w100">100%</div>
+                    </div>
+
+                    <h4 class="fw-normal mb1">Inglês</h4>
+                    <div class="progresso mb3">
+                        <div class="w60">60%</div>
+                    </div>
+
+                    <h4 class="fw-normal mb1">Espanhol</h4>
+                    <div class="progresso mb3">
+                        <div class="w70">70%</div>
+                    </div>
+
+                    <h4 class="fw-normal mb1">Alemão</h4>
+                    <div class="progresso mb3">
+                        <div class="w30">30%</div>
+                    </div>
+
+                </div>
 
             </div>
 
@@ -154,75 +189,93 @@
             <hr id="projetos">
             <h2 class="my3">#projetos_relevantes</h2>
             <div class="projetos">
+                <div class="card">
+                    <img src="img/projeto1.png" alt="">
+                    <h3 class="my1 p1">Only Dogs</h3>
+                    <p class="lh3 p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis odio
+                        voluptatum recusandae non dolorem accusamus possimus eligendi voluptatibus, quaerat vitae
+                        sapiente numquam. Placeat nihil eveniet nesciunt.</p>
+                </div>
 
-                <div class="card"></div>
-                <div class="card mx1"></div>
-                <div class="card"></div>
+                <div class="card mx1">
+                    <img src="img/projeto3.png" alt="">
+                    <h3 class="my1 p1">Clínica Modelo</h3>
+                    <p class="lh3 p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis odio
+                        voluptatum recusandae non dolorem accusamus possimus eligendi voluptatibus, quaerat vitae
+                        sapiente numquam. Placeat nihil eveniet nesciunt.</p>
+                </div>
 
+                <div class="card">
+                    <img src="img/projeto2.png" alt="">
+                    <h3 class="my1 p1">Sofisty Modas</h3>
+                    <p class="lh3 p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis odio
+                        voluptatum recusandae non dolorem accusamus possimus eligendi voluptatibus, quaerat vitae
+                        sapiente numquam. Placeat nihil eveniet nesciunt.</p>
+                </div>
             </div>
 
-            <!--Preços-->
-            <hr id="precos" class="mt3">
-            <h2 class="my3">#quanto_cobro</h2>
-            <div class="precos">
-                <table>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </table>
-            </div>
-
-            <!--Contato-->
-            <hr id="contato" class="mt3">
-            <h2 class="my3">#entre_em_contato</h2>
-            <div class="contato">
-                <table></table>
-                <form action="post" class="my3"></form>
-            </div>
-
-
-            <!--Rodapé-->
-            <div class="rodape bg-dark p5">
-
-            </div>
+        <!--Preços-->
+        <hr id="precos" class="mt3">
+        <h2 class="my3">#quanto_cobro</h2>
+        <div class="precos">
+            <table>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
         </div>
+
+        <!--Contato-->
+        <hr id="contato" class="mt3">
+        <h2 class="my3">#entre_em_contato</h2>
+        <div class="contato">
+            <table></table>
+            <form action="post" class="my3"></form>
+        </div>
+
+
+        <!--Rodapé-->
+        <div class="rodape bg-dark p5">
+
+        </div>
+    </div>
     </div>
 </body>
 
