Update em módulo #Projetos

--- a/Front-End/Módulo 1/3ª Semana/Trabalho Prático da 3ª Semana/index.html
+++ b/Front-End/Módulo 1/3ª Semana/Trabalho Prático da 3ª Semana/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
-    <title>Trabalho Prático da 3ª Semana</title>
+    <title>Aylmer Bolzan - Portfólio</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.png">
 </head>
 
 <body>
@@ -189,93 +190,102 @@
             <hr id="projetos">
             <h2 class="my3">#projetos_relevantes</h2>
             <div class="projetos">
+                <!--GoldClube.com-->
                 <div class="card">
                     <img src="img/projeto1.png" alt="">
-                    <h3 class="my1 p1">Only Dogs</h3>
-                    <p class="lh3 p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis odio
-                        voluptatum recusandae non dolorem accusamus possimus eligendi voluptatibus, quaerat vitae
-                        sapiente numquam. Placeat nihil eveniet nesciunt.</p>
+                    <h3 class="my1 p1">GoldClube.com</h3>
+                    <p class="lh3 p1">Agência de marketing de afiliação da região das montanhas capixabas que atua
+                        com produtos cosméticos, principalmente produtos capilares e emagrecedores.<br>Trabalhando com a
+                        criação
+                        de landing pages e focado em performance de tráfego pago, elevamos o marketing digital regional
+                        a outro
+                        nível ainda não trabalhado anteriormente.</p>
                 </div>
 
+                <!--CPAPS.com.br-->
                 <div class="card mx1">
                     <img src="img/projeto3.png" alt="">
-                    <h3 class="my1 p1">Clínica Modelo</h3>
-                    <p class="lh3 p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis odio
-                        voluptatum recusandae non dolorem accusamus possimus eligendi voluptatibus, quaerat vitae
-                        sapiente numquam. Placeat nihil eveniet nesciunt.</p>
+                    <h3 class="my1 p1">CPAPS.com.br</h3>
+                    <p class="lh3 p1">Atuando como Gerente de E-commerce, tive a oportunidade de, por 4 anos,
+                        estar à frente do Marketing do maior e-commerce de equipamentos respiratórios da América Latina,
+                        passando inclusive por um momento super peculiar ao negócio, que foi a pandemia do COVID-19, em
+                        que o
+                        principal tipo de equipamento necessário era comercializado pela empresa.</p>
                 </div>
 
+                <!--Bioage.com.br-->
                 <div class="card">
                     <img src="img/projeto2.png" alt="">
-                    <h3 class="my1 p1">Sofisty Modas</h3>
-                    <p class="lh3 p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis odio
-                        voluptatum recusandae non dolorem accusamus possimus eligendi voluptatibus, quaerat vitae
-                        sapiente numquam. Placeat nihil eveniet nesciunt.</p>
+                    <h3 class="my1 p1">Bioage.com.br</h3>
+                    <p class="lh3 p1">À frente da equipe Comercial e do Marketing, tive a oportunidade de implantar o
+                        e-commerce regional da franquia Bioage Vitória em Open Cart, levando a empresa a uma outra
+                        maturidade no varejo digital, quando anteriormente trabalhava somente com as redes sociais
+                        (Instagram e Facebook) e com representantes porta-a-porta e através de vendas por telefone.</p>
                 </div>
             </div>
 
-        <!--Preços-->
-        <hr id="precos" class="mt3">
-        <h2 class="my3">#quanto_cobro</h2>
-        <div class="precos">
-            <table>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </table>
+            <!--Preços-->
+            <hr id="precos" class="mt3">
+            <h2 class="my3">#quanto_cobro</h2>
+            <div class="precos">
+                <table>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </table>
+            </div>
+
+            <!--Contato-->
+            <hr id="contato" class="mt3">
+            <h2 class="my3">#entre_em_contato</h2>
+            <div class="contato">
+                <table></table>
+                <form action="post" class="my3"></form>
+            </div>
+
+
+            <!--Rodapé-->
+            <div class="rodape bg-dark p5">
+
+            </div>
         </div>
-
-        <!--Contato-->
-        <hr id="contato" class="mt3">
-        <h2 class="my3">#entre_em_contato</h2>
-        <div class="contato">
-            <table></table>
-            <form action="post" class="my3"></form>
-        </div>
-
-
-        <!--Rodapé-->
-        <div class="rodape bg-dark p5">
-
-        </div>
-    </div>
     </div>
 </body>
 
